Started plugin base

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,9 @@
 name: Bedwars
 version: @version@
-main: me.lorenzo0111.bedwars.Bedwars
+main: me.lorenzo0111.bedwars.BedwarsPlugin
 api-version: '1.13'
 authors: [ Lorenzo0111 ]
+commands:
+  bedwars:
+    aliases:
+      - bw
