--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
         maven { url 'https://repo.xenondevs.xyz/releases' }
         maven { url 'https://repo.papermc.io/repository/maven-public/' }
         maven { url 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
+        maven { url 'https://repo.rapture.pw/repository/maven-releases/' }
     }
 
     dependencies {
