--- a/bukkit/src/main/resources/config.yml
+++ b/bukkit/src/main/resources/config.yml
@@ -164,6 +164,7 @@ messages:
   world-not-found: "&cThe world you entered was not found."
   setup-started: "&7The setup has started."
   game-not-found: "&cCannot find a game for you!"
+  game-full: "&cThe game is full."
 
   setup:
     arenas: "&7Please enter the &c&narena count&7."
@@ -171,3 +172,8 @@ messages:
     team-players: "&7Please enter the &c&nplayers per team&7."
     complete: "&7The setup has been completed."
     incomplete: "&7The setup is incomplete. Please complete the setup."
+
+  titles:
+    start-countdown:
+      title: "&c%time%"
+      subtitle: "&7until the game starts."
