Finished hologram system

--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -3,7 +3,10 @@ dependencies {
     implementation('org.bstats:bstats-bukkit:3.0.2')
     implementation('xyz.xenondevs.invui:invui:1.33')
     implementation('com.zaxxer:HikariCP:5.1.0')
+
     compileOnly('com.github.decentsoftware-eu:decentholograms:2.8.9')
+    compileOnly('com.infernalsuite.aswm:api:1.20.4-R0.1-SNAPSHOT')
+    compileOnly('me.clip:placeholderapi:2.11.6')
 }
 
 shadowJar {
