--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,13 @@ subprojects {
         maven { url 'https://repo.papermc.io/repository/maven-public/' }
         maven { url 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
         maven { url 'https://repo.rapture.pw/repository/maven-releases/' }
+        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
     }
 
     dependencies {
         compileOnly('org.jetbrains:annotations:24.1.0')
         compileOnly('org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT')
         compileOnly('org.projectlombok:lombok:1.18.34')
-        compileOnly('com.infernalsuite.aswm:api:1.20.4-R0.1-SNAPSHOT')
         annotationProcessor('org.projectlombok:lombok:1.18.34')
     }
 
