Started shop system

--- a/bukkit/src/main/resources/config.yml
+++ b/bukkit/src/main/resources/config.yml
@@ -171,6 +171,15 @@ menus:
         - "# . . . . . . . #"
         - "# # # < # > # # #"
 
+    shop:
+      title: "&7Shop"
+      structure:
+        - "# # # # # # # # #"
+        - "# . . . . . . . #"
+        - "# . . . . . . . #"
+        - "# . . . . . . . #"
+        - "# # # # # # # # #"
+
 generators:
   IRON_INGOT: 100
   GOLD_INGOT: 200
